--- a/Client/CheckersBoard.razor
+++ b/Client/CheckersBoard.razor
@@ -16,12 +16,16 @@
             
             bool isPossibleMove = movePossibilities.Contains((auxI, auxJ));
 
-            <div class="cell @(isPossibleMove ? "active" : "")" @onclick="() => { MoveChecker(auxI, auxJ); }">
+            <div class="cell" @onclick="() => { MoveChecker(auxI, auxJ); }">
                 @if (checker != null)
                 {
                     <div class="checker @checker.Color @(checker == activeChecker ? "active" : "")" @onclick="()=> { CheckerPieceClicked(checker); }">
-                        <div>@(checker.Diretion == CheckerDirection.Both ? "♕" : "")</div>
+                        <div class="center">@(checker.Diretion == CheckerDirection.Both ? "♕" : "")</div>
                     </div>
+                }
+                @if (isPossibleMove)
+                {
+                    <div class="center target-move">🎯</div>
                 }
             </div>
         }
