--- a/Client/wwwroot/css/app.css
+++ b/Client/wwwroot/css/app.css
@@ -4,6 +4,12 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+.sidebar {
+    background: #1e130c !important;
+    background: -webkit-linear-gradient(to bottom, #1e130c, #9a8478) !important;
+    background: linear-gradient(to bottom, #1e130c, #9a8478) !important;
+}
+
 h1:focus {
     outline: none;
 }
